samples/_failures_safe/1761397779_fc4141_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b0ecb52.c: In function ‘main’:
./samples/SAFE/__tmp_0b0ecb52.c:162:20: error: expected ‘]’ at end of input
  162 |     char input[1024
      |                    ^
      |                    ]
./samples/SAFE/__tmp_0b0ecb52.c:162:5: error: expected declaration or statement at end of input
  162 |     char input[1024
      |     ^~~~
